Fix wrapper, remove xd